--- a/templates/calc.html
+++ b/templates/calc.html
@@ -177,7 +177,7 @@
   }
 
   var displayControls = function(){
-    
+    console.log("displaying")
   }
 
   $('input[name="startdatetime"]').keyup(function(){
