--- a/templates/calc.html
+++ b/templates/calc.html
@@ -175,7 +175,7 @@
   }
 
   var displayControls = function(){
-    console.log("displaying")
+    console.log("display controles");
   }
 
   var createEvent = function(){
