Writing ajax posts handlers

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -213,7 +213,7 @@
       var htmlcode = "<div class='alert alert-" + type + "'><a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a>";
       htmlcode = htmlcode + message + "</div>";
 
-      $('div[name="alertContainer"]').html(htmlCode);
+      $('div[name="alertContainer"]').html(htmlcode);
   }
   
 </script>
