--- a/templates/calc.html
+++ b/templates/calc.html
@@ -66,7 +66,7 @@
   <span class="input-group-addon">Start Time</span>
   <input type="text" class="form-control" id="startTime" name="startdatetime" value="HH:mm"/>
 </div>
-<div class="container" name="alertContainer">
+<div class="container col-sm-3" name="alertContainer">
   <div class="alert alert-success">
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     This is a test.
