Writing ajax posts handlers

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -58,18 +58,20 @@
     <li><a href='#' name="ddmItem">1000 km </a></li>
   </ul>
 </div>
-<div class="input-group col-sm-3">
-  <span class="input-group-addon">Start Date</span>
-  <input type="text" class="form-control" id="startDate" name="startdatetime" value="YYYY/MM/DD"/>
-</div>
-<div class="input-group col-sm-3">
-  <span class="input-group-addon">Start Time</span>
-  <input type="text" class="form-control" id="startTime" name="startdatetime" value="HH:mm"/>
-</div>
-<div class="container col-sm-3" name="alertContainer">
-  <div class="alert alert-success">
-    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-    This is a test.
+<div class="row">
+  <div class="input-group col-sm-3">
+    <span class="input-group-addon">Start Date</span>
+    <input type="text" class="form-control" id="startDate" name="startdatetime" value="YYYY/MM/DD"/>
+  </div>
+  <div class="input-group col-sm-3">
+    <span class="input-group-addon">Start Time</span>
+    <input type="text" class="form-control" id="startTime" name="startdatetime" value="HH:mm"/>
+  </div>
+  <div class="container col-sm-3" name="alertContainer">
+    <div class="alert alert-success">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      This is a test.
+    </div>
   </div>
 </div>
 <br><br>
