Writing ajax posts handlers

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -66,6 +66,8 @@
   <div class="input-group col-sm-3">
     <span class="input-group-addon">Start Time</span>
     <input type="text" class="form-control" id="startTime" name="startdatetime" value="HH:mm"/>
+    <span class="input-group-addon">Start Time</span>
+    <input type="text" class="form-control" id="startTime" name="startdatetime" value="HH:mm"/>
   </div>
   <div class="container col-sm-3" name="alertContainer">
     <div class="alert alert-success">
