--- a/templates/calc.html
+++ b/templates/calc.html
@@ -66,6 +66,7 @@
   <div class="input-group col-sm-6">
     <span class="input-group-addon">Start Time</span>
     <input type="text" class="form-control" id="startTime" name="startdatetime" value="HH:mm"/>
+    &bspn;
     <span class="input-group-addon">Start Time</span>
     <input type="text" class="form-control" id="startTime" name="startdatetime" value="HH:mm"/>
   </div>
