--- a/templates/calc.html
+++ b/templates/calc.html
@@ -59,14 +59,11 @@
   </ul>
 </div>
 <div class="row">
-  <div class="input-group col-sm-3">
+  <div class="input-group col col-sm-3">
     <span class="input-group-addon">Start Date</span>
     <input type="text" class="form-control" id="startDate" name="startdatetime" value="YYYY/MM/DD"/>
   </div>
-  <div class="input-group col-sm-6">
-    <span class="input-group-addon">Start Time</span>
-    <input type="text" class="form-control" id="startTime" name="startdatetime" value="HH:mm"/>
-    &bspn;
+  <div class="input-group col col-sm-3">
     <span class="input-group-addon">Start Time</span>
     <input type="text" class="form-control" id="startTime" name="startdatetime" value="HH:mm"/>
   </div>
