--- a/templates/calc.html
+++ b/templates/calc.html
@@ -59,19 +59,19 @@
   </ul>
 </div>
 <div class="controls-row">
-    <div class="control-group col col-lg-2">
+    <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Date</span>
             <input type="text" class="form-control" value="YYYY/MM/DD">
         </div>
     </div>
-    <div class="control-group col col-lg-2">
+    <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Time</span>
             <input type="text" class="form-control" value="HH:mm">
         </div>
     </div>
-    <div class="container col-sm-3" name="alertContainer">
+    <div class="control-group col col-sm-3" name="alertContainer">
       <div class="alert alert-success">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
         This is a test.
