--- a/templates/calc.html
+++ b/templates/calc.html
@@ -51,7 +51,13 @@
 <br>
 <form role="form">
 <div class="controls-row">
-<div class="dropdown control-group">
+    <div class="col-sm-3 pull-right" name="alertContainer">
+      <div class="alert alert-success text-center">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        This is a test.
+      </div>
+    </div>
+<div class="dropdown control-group" style="padding-left: 16px;padding-bottom: 5px;">
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="dropMenu">Brevet Distance: 200 km <span class="caret"/></button>
   <ul class="dropdown-menu">
     <li><a href='#' name="ddmItem">200 km </a></li>
@@ -74,12 +80,6 @@
         </div>
     </div>
 </div>
-    <div class="col-sm-3 pull-right" name="alertContainer">
-      <div class="alert alert-success text-center">
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-        This is a test.
-      </div>
-    </div>
 <br><br><br><br>
 <!-- Design on bootstrap grid -->
 
