--- a/templates/calc.html
+++ b/templates/calc.html
@@ -50,13 +50,12 @@
 {% endwith %}
 <br>
 <form role="form">
+<div class="alert alert-success text-center">
+  <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+  Event created for that time.
+</div>
 <div class="controls-row">
-    <div class="col-sm-4 pull-right" name="alertContainer">
-      <div class="alert alert-success text-center">
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-        This is a test.
-      </div>
-    </div>
+
 <div class="dropdown control-group" style="padding-left: 16px;padding-bottom: 5px;">
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="dropMenu">Brevet Distance: 200 km <span class="caret"/></button>
   <ul class="dropdown-menu">
