--- a/templates/calc.html
+++ b/templates/calc.html
@@ -194,7 +194,7 @@
 
   var createEvent = function(){
       var date = $('#startDate').val();
-      var time = $('#startTime').val()
+      var time = $('#startTime').val();
       
       if(dateRegex.test(date) && timeRegex.test(time)){
 
