--- a/templates/calc.html
+++ b/templates/calc.html
@@ -69,13 +69,13 @@
     <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Date</span>
-            <input type="text" class="form-control" value="YYYY/MM/DD">
+            <input type="text" class="form-control" name="startdatetime" value="YYYY/MM/DD">
         </div>
     </div>
     <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Time</span>
-            <input type="text" class="form-control" value="HH:mm">
+            <input type="text" class="form-control" name="startdatetime" value="HH:mm">
         </div>
     </div>
 </div>
