--- a/templates/calc.html
+++ b/templates/calc.html
@@ -69,13 +69,13 @@
     <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Date</span>
-            <input type="text" class="form-control" name="startdatetime" value="YYYY/MM/DD">
+            <input type="text" class="form-control" name="startdatetime" id="startDate" value="YYYY/MM/DD">
         </div>
     </div>
     <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Time</span>
-            <input type="text" class="form-control" name="startdatetime" value="HH:mm">
+            <input type="text" class="form-control" name="startdatetime" id="startTime" value="HH:mm">
         </div>
     </div>
 </div>
@@ -213,7 +213,6 @@
   }
 
   $('input[name="startdatetime"]').keyup(function(){
-      console.log("keyup");
       createEvent();
   });
 
