--- a/templates/calc.html
+++ b/templates/calc.html
@@ -31,7 +31,7 @@
 
 <h1>ACP Brevet</h1>
 <form role="form">
-<div class="alert alert-success text-center" id="alertContainer">
+<div class="alert alert-success text-center" name="alertContainer">
   <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
   Event created for that time.
 </div>
