--- a/templates/calc.html
+++ b/templates/calc.html
@@ -31,9 +31,11 @@
 
 <h1>ACP Brevet</h1>
 <form role="form">
+<div class="container">
 <div class="alert alert-success text-center" name="alertContainer">
   <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
   Event created for that time.
+</div>
 </div>
   <!--
   -- If there are any warnings or other messages from a prior
@@ -189,7 +191,7 @@
   }
 
   var displayControls = function(){
-    console.log("display controles");
+    
   }
 
   var createEvent = function(){
