--- a/templates/calc.html
+++ b/templates/calc.html
@@ -31,11 +31,11 @@
 
 <h1>ACP Brevet</h1>
 <form role="form">
-<div class="container">
-<div class="alert alert-success text-center" name="alertContainer">
-  <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-  Event created for that time.
-</div>
+<div class="container" name="alertContainer">
+  <div class="alert alert-success text-center">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    Event created for that time.
+  </div>
 </div>
   <!--
   -- If there are any warnings or other messages from a prior
@@ -219,10 +219,9 @@
   });
 
   var sendAlert = function(message, type){
-      var htmlcode = "<a href='#'' class='close' data-dismiss='alert' aria-label='close'>&times;</a>";
-      htmlcode = htmlcode + message;
+      var htmlcode = "<div class='alert alert-success text-center'><a href='#'' class='close' data-dismiss='alert' aria-label='close'>&times;</a>";
+      htmlcode = htmlcode + message + "</div>";
 
-      console.log($('div[name="alertContainer"]').html());
       $('div[name="alertContainer"]').html(htmlcode);
   }
   
