--- a/templates/calc.html
+++ b/templates/calc.html
@@ -215,7 +215,7 @@
   });
 
   var sendAlert = function(message, type){
-      var htmlcode = "<div class='alert alert-success text-center'><a href='#'' class='close' data-dismiss='alert' aria-label='close'>&times;</a>";
+      var htmlcode = "<div class='alert alert-success text-center'>";
       htmlcode = htmlcode + message + "</div>";
 
       msgContainer = $('div[name="alertContainer"]')
