--- a/templates/calc.html
+++ b/templates/calc.html
@@ -202,7 +202,7 @@
                   if(msg.includes("set")){
                       sendAlert(msg,"success");
                       $('#firstOpen').html(data.result.open);
-                      $('#firstClose').html(data.result.open);
+                      $('#firstClose').html(data.result.close);
                   }
                   else
                     sendAlter(msg, "warning");
@@ -218,7 +218,7 @@
   });
 
   var sendAlert = function(message, type){
-      var htmlcode = "<div class='alert alert-" + type + "text-center'><a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a>";
+      var htmlcode = "<div class='alert alert-" + type + " text-center'><a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a>";
       htmlcode = htmlcode + message + "</div>";
 
       msgContainer = $('div[name="alertContainer"]')
