Working on Ajax posts

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -205,7 +205,7 @@
                       $('#firstClose').html(data.result.close);
                   }
                   else
-                    sendAlert(msg, "warning");
+                    sendAlert(msg, "danger");
               }
           );
 
