Working on Ajax posts

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -79,64 +79,65 @@
 </div>
 <br><br><br><br>
 <!-- Design on bootstrap grid -->
+<div class="container" name="controles">
+  <div class="row">
+    <div class="col-sm-1">
+      <p class="text-center">No.</p>
+    </div>
+    <div class="col-sm-4">
+      <p class="text-center">Distance</p>
+    </div>
+    <div class="col-sm-3">
+      <p class="text-center">Location</p>
+    </div>
+    <div class="col-sm-2">
+      <p class="text-center">Open Time</p>
+    </div>
+    <div class="col-sm-2">
+      <p class="text-center">Close Time</p>
+    </div>
+  </div>
 
-<div class="row">
-  <div class="col-sm-1">
-    <p class="text-center">No.</p>
+  <div class="row">
+    <div class="col-sm-1">
+      <div class="text-center h5">1</div>
+    </div>
+    <div class="col-sm-2">
+      <p class="text-center" name="miles">0</p>
+    </div>
+    <div class="col-sm-2">
+      <p class="text-center" name="kilometers">0</p>
+    </div>
+    <div class="col-sm-3">
+      <input type="text" class="form-control text-center" name="location" value="Optional" />
+    </div>
+    <div class="col-sm-2">
+      <p class="times text-center" name="open" id="firstOpen">(Open)</p>
+    </div>
+    <div class="col-sm-2">
+      <p class="times text-center" name="close" id="firstClose">(Close)</p>
+    </div>
   </div>
-  <div class="col-sm-4">
-    <p class="text-center">Distance</p>
-  </div>
-  <div class="col-sm-3">
-    <p class="text-center">Location</p>
-  </div>
-  <div class="col-sm-2">
-    <p class="text-center">Open Time</p>
-  </div>
-  <div class="col-sm-2">
-    <p class="text-center">Close Time</p>
-  </div>
-</div>
 
-<div class="row">
-  <div class="col-sm-1">
-    <div class="text-center h5">1</div>
-  </div>
-  <div class="col-sm-2">
-    <p class="text-center" name="miles">0</p>
-  </div>
-  <div class="col-sm-2">
-    <p class="text-center" name="kilometers">0</p>
-  </div>
-  <div class="col-sm-3">
-    <input type="text" class="form-control text-center" name="location" value="Optional" />
-  </div>
-  <div class="col-sm-2">
-    <p class="times text-center" name="open" id="firstOpen">(Open)</p>
-  </div>
-  <div class="col-sm-2">
-    <p class="times text-center" name="close" id="firstClose">(Close)</p>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-1">
-    <div class="text-center h5">2</div>
-  </div>
-  <div class="col-sm-2">
-    <input type="text" class="form-control text-center" name="miles" value="Miles"/>
-  </div>
-  <div class="col-sm-2">
-    <input type="text" class="form-control text-center" name="kilometers" value="Kilometers"/>
-  </div>
-  <div class="col-sm-3">
-    <input type="text" class="form-control text-center" name="location" value="Optional" />
-  </div>
-  <div class="col-sm-2">
-    <p class="times text-center" name="open">(Open)</p>
-  </div>
-  <div class="col-sm-2">
-    <p class="times text-center" name="close">(Close)</p>
+  <div class="row">
+    <div class="col-sm-1">
+      <div class="text-center h5">2</div>
+    </div>
+    <div class="col-sm-2">
+      <input type="text" class="form-control text-center" name="miles" value="Miles"/>
+    </div>
+    <div class="col-sm-2">
+      <input type="text" class="form-control text-center" name="kilometers" value="Kilometers"/>
+    </div>
+    <div class="col-sm-3">
+      <input type="text" class="form-control text-center" name="location" value="Optional" />
+    </div>
+    <div class="col-sm-2">
+      <p class="times text-center" name="open">(Open)</p>
+    </div>
+    <div class="col-sm-2">
+      <p class="times text-center" name="close">(Close)</p>
+    </div>
   </div>
 </div>
 </form>
