Working on Ajax posts

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -82,19 +82,19 @@
 <div class="container" name="controles">
   <div class="row">
     <div class="col-sm-1">
-      <p class="text-center">No.</p>
+      <p class="text-center"><u>No.</u></p>
     </div>
     <div class="col-sm-4">
-      <p class="text-center">Distance</p>
+      <p class="text-center"><u>Distance</u></p>
     </div>
     <div class="col-sm-3">
-      <p class="text-center">Location</p>
+      <p class="text-center"><u>Location</u></p>
     </div>
     <div class="col-sm-2">
-      <p class="text-center">Open Time</p>
+      <p class="text-center"><u>Open Time</u></p>
     </div>
     <div class="col-sm-2">
-      <p class="text-center">Close Time</p>
+      <p class="text-center"><u>Close Time</u></p>
     </div>
   </div>
 
