Working on Ajax posts

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -79,7 +79,7 @@
 </div>
 <br><br><br><br>
 <!-- Design on bootstrap grid -->
-<div class="container" name="controles">
+<div class="container hidden" name="controles">
   <div class="row">
     <div class="col-sm-1">
       <p class="text-center"><u>No.</u></p>
