--- a/templates/calc.html
+++ b/templates/calc.html
@@ -204,6 +204,7 @@
                       sendAlert(msg,"success");
                       $('#firstOpen').html(data.result.open);
                       $('#firstClose').html(data.result.close);
+                      $('div[names="controles"]').toggleClass("hidden");
                   }
                   else
                     sendAlert(msg, "danger");
