--- a/templates/calc.html
+++ b/templates/calc.html
@@ -67,13 +67,13 @@
     <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Date</span>
-            <input type="text" class="form-control" name="startdatetime" id="startDate" value="YYYY/MM/DD">
+            <input type="text" class="form-control" name="startdatetime" id="startDate" value="2016/11/05">
         </div>
     </div>
     <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Time</span>
-            <input type="text" class="form-control" name="startdatetime" id="startTime" value="HH:mm">
+            <input type="text" class="form-control" name="startdatetime" id="startTime" value="12:0">
         </div>
     </div>
 </div>
@@ -204,8 +204,7 @@
                       sendAlert(msg,"success");
                       $('#firstOpen').html(data.result.open);
                       $('#firstClose').html(data.result.close);
-                      console.log($('div[names="controles"]').html());
-                      $('div[names="controles"]').toggleClass("hidden");
+                      $('div[name="controles"]').toggleClass("hidden");
                   }
                   else
                     sendAlert(msg, "danger");
