--- a/templates/calc.html
+++ b/templates/calc.html
@@ -32,7 +32,7 @@
 
 <h1>ACP Brevet</h1>
 <form role="form">
-<div class="container" name="alertContainer" style="float:">
+<div class="container pull-right" name="alertContainer">
 </div>
   <!--
   -- If there are any warnings or other messages from a prior
