Adding control logic

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -244,7 +244,7 @@
   });
 
   var sendAlert = function(message, type){
-      var htmlcode = "<div class='alert alert-" + type + " text-center'><a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a>";
+      var htmlcode = "<div class='alert alert-" + type + " text-center pull-right'><a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a>";
       htmlcode = htmlcode + message + "</div>";
 
       msgContainer = $('div[name="alertContainer"]')
