--- a/templates/calc.html
+++ b/templates/calc.html
@@ -32,7 +32,7 @@
 
 <h1>ACP Brevet</h1>
 <form role="form">
-<div class="container" style="position: abosulte" name="alertContainer">
+<div class="container" style="position: abosulte;" name="alertContainer">
 </div>
   <!--
   -- If there are any warnings or other messages from a prior
@@ -244,7 +244,7 @@
   });
 
   var sendAlert = function(message, type){
-      var htmlcode = "<div class='alert alert-" + type + " text-center pull-right'><a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a>";
+      var htmlcode = "<div class='alert alert-" + type + " text-center'><a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a>";
       htmlcode = htmlcode + message + "</div>";
 
       msgContainer = $('div[name="alertContainer"]')
