Adding control logic

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -32,7 +32,7 @@
 
 <h1>ACP Brevet</h1>
 <form role="form">
-<div class="container" style="position: abosulte;" name="alertContainer">
+<div class="container" style="position: absolute; top: 30px; left: 40px;" name="alertContainer">
 </div>
   <!--
   -- If there are any warnings or other messages from a prior
