Adding control logic

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -30,7 +30,7 @@
 <div class="container">
 
 
-<h1>ACP Brevet</h1>
+<h1 class="text-center">ACP Brevet</h1>
 <form role="form">
 <div class="container" style="position: absolute; top: 30px; left: 150px;" name="alertContainer">
 </div>
