--- a/templates/calc.html
+++ b/templates/calc.html
@@ -32,7 +32,7 @@
 
 <h1 class="text-center">ACP Brevet</h1>
 <form role="form">
-<div class="container" style="position: absolute; top: 30px; left: 150px;" name="alertContainer">
+<div class="container" style="position: absolute; top: 30px; left: 0px; right: 0px; margin-left: auto; margin-right: auto;" name="alertContainer">
 </div>
   <!--
   -- If there are any warnings or other messages from a prior
