--- a/templates/calc.html
+++ b/templates/calc.html
@@ -123,7 +123,7 @@
   {% for n in range(19) %}
   <div class="row">
     <div class="col-sm-1">
-      <div class="text-center h5">{{ loop.index }}</div>
+      <div class="text-center h5">{{ (loop.index+1) }}</div>
     </div>
     <div class="col-sm-2">
       <input type="text" class="form-control text-center" name="miles" value="Miles"/>
