Adding control logic

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -211,7 +211,7 @@
 
   var displayNextControl = function(){
       $('div[name="controles"]').removeClass("hidden");
-      console.log($('div[name"controles"]').children()[cControleCount].html());
+      console.log($('div[name="controles"]').children()[cControleCount].html());
   }
 
   var createEvent = function(){
