Adding control logic

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -217,6 +217,8 @@
           nextChild.removeClass("hidden");
           cControleCount++;
       }
+      else
+        sendAlert("Sorry, you have run out of controles.","warning");
   }
 
   var createEvent = function(){
