--- a/templates/calc.html
+++ b/templates/calc.html
@@ -149,14 +149,14 @@
 
   $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 
-  var KM_PER_MILE = 1.6;
-  var dateRegex = /^\d{4}\/([0][1-9]|[1][012])\/([0][1-9]|[12][\d]|[3][01])$/;
-  var timeRegex = /^([0-1][0-9]|[2][0-3]):([0-5][0-9])$/;
-  var brevetDistance = /\b\d{3,4}\b/;
-  var distRegex = /^\d{2,4}$/;
+  //regular expressions used to check input
+  var dateRegex = /^\d{4}\/([0][1-9]|[1][012])\/([0][1-9]|[12][\d]|[3][01])$/; //  YYYY/MM/DD; doesn't stop bad dates like Feb 30
+  var timeRegex = /^([0-1][0-9]|[2][0-3]):([0-5][0-9])$/; //allows only 00:00 to 23:59
+  var brevetDistance = /\b\d{3,4}\b/; //gets 3 to 4 integers in the middle of string
 
-  var brevetLength = 200; //initial value
-  var cControleCount = 2;
+  var KM_PER_MILE = 1.6; //conversion for mi and km
+  var brevetLength = 200; //initial value, lowest brevet length
+  var cControleCount = 2; //index used to reveal new inputs as needed
 
   $(document).ready(function(){
    // Do the following when the page is finished loading
@@ -169,10 +169,11 @@
               var closeObj = $(this).parents(".row").find("p[name='close']");
               kmInput.val(Math.round(miles*KM_PER_MILE));
 
-
+              //make ajax post
               getControleTimes(kmInput.val(),brevetLength,openObj,closeObj);
           });  // End of the change function
 
+      //When a field named 'kilometers' is changed
       $('input[name="kilometers"]').change(
           function(){
               var kilometers = $(this).val();
@@ -181,6 +182,7 @@
               var closeObj = $(this).parents(".row").find("p[name='close']");
               miInput.val(Math.round(kilometers/KM_PER_MILE));
 
+              //make ajax post
               getControleTimes(kilometers,brevetLength,openObj,closeObj);
           });  // End of the change function
 
@@ -189,29 +191,32 @@
   $('a[name="ddmItem"]').click(function(){
       $('#dropMenu').html("Brevet Length: " + $(this).text() + " <span class='caret' />");
       brevetLength = parseInt($(this).text());
+
+      //handles ajax post
       createEvent();
   });
 
   var getControleTimes = function(dist, tDist, openElem, closeElem) {
     
-    $.post( "/_calc_times", {"dist": dist},
+    $.post( "/_calc_times", {"dist": dist}, //function to call on server, dict with arguments
         function(data) { //this function handles the response.
-            if(data.result.message.includes("added")){
+            if(data.result.message.includes("added")){ //valid open and close times received
+                //display times and alert changes to user
                 openElem.html(data.result.open);
                 closeElem.html(data.result.close);
                 sendAlert(data.result.message,"success");
 
+                //show the next control
                 displayNextControl();
             }
             else
-              sendAlert(data.result.message,"danger");
+              sendAlert(data.result.message,"danger"); //problem let the user know.
         }
     );
   }
 
+  //this reveals next control, they all exist at start but are hidden
   var displayNextControl = function(){
-      $('div[name="controles"]').removeClass("hidden");
-
       if(cControleCount<=21){ //because this is the max amount we have available
           nextChild = $('div[name="controles"]').children().eq(cControleCount);
           nextChild.removeClass("hidden");
@@ -225,35 +230,43 @@
       var date = $('#startDate').val();
       var time = $('#startTime').val();
       
-      if(dateRegex.test(date) && timeRegex.test(time)){
-
+      if(dateRegex.test(date) && timeRegex.test(time)){ //ajax post doesn't happen until regex pass
+          //calling _set_start, with a dict object as the arguments
           $.post( "/_set_start", {"bStart": date + " " + time, "bLength": brevetLength},
               function(data) { //this function handles the response.
                   var msg = data.result.message;
-                  if(msg.includes("set")){
+                  if(msg.includes("set")){ //successful operation
                       sendAlert(msg,"success");
                       $('#firstOpen').html(data.result.open);
                       $('#firstClose').html(data.result.close);
-                      displayNextControl();
+                      $('div[name="controles"]').removeClass("hidden"); //showing controle inputs
+
+                      if(cControleCountCount == 2)
+                        displayNextControl();
                   }
                   else
-                    sendAlert(msg, "danger");
+                    sendAlert(msg, "danger"); //problems occurred
               }
           );
       }
   }
 
+  //check date-time input with each keyup
   $('input[name="startdatetime"]').keyup(function(){
+      //this is only a try, createEvent handles validation as well
       createEvent();
   });
 
   var sendAlert = function(message, type){
+      //making a string of html to write to page, not very pretty but it works
       var htmlcode = "<div class='alert alert-" + type + " text-center'><a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a>";
       htmlcode = htmlcode + message + "</div>";
 
       msgContainer = $('div[name="alertContainer"]')
-
       msgContainer.html(htmlcode);
+
+      //the following is the code to make the alerts disappear automatically
+      //credit to "I Can Has Kittenz" @ http://stackoverflow.com/questions/23101966/bootstrap-alert-auto-close
       msgContainer.fadeTo(2000, 500).slideUp(500, function(){
           msgContainer.slideUp(500);
       });
