fixed a display bug

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -241,7 +241,7 @@
                       $('#firstClose').html(data.result.close);
                       $('div[name="controles"]').removeClass("hidden"); //showing controle inputs
 
-                      if(cControleCountCount == 2)
+                      if(cControleCount == 2)
                         displayNextControl();
                   }
                   else
