--- a/templates/calc.html
+++ b/templates/calc.html
@@ -123,7 +123,7 @@
   {% for n in range(19) %}
   <div class="row hidden">
     <div class="col-sm-1">
-      <div class="text-center h5">{{ (loop.index+1) }}</div>
+      <div class="text-center h5" name="counter">{{ (loop.index+1) }}</div>
     </div>
     <div class="col-sm-2">
       <input type="text" class="form-control text-center" name="miles" value="Miles"/>
@@ -165,12 +165,10 @@
           function(){
               var miles = $(this).val();
               var kmInput = $(this).parents(".row").find("input[name='kilometers']");
-              var openObj = $(this).parents(".row").find("p[name='open']");
-              var closeObj = $(this).parents(".row").find("p[name='close']");
               kmInput.val(Math.round(miles*KM_PER_MILE));
 
               //make ajax post
-              getControleTimes(kmInput.val(),brevetLength,openObj,closeObj);
+              getControleTimes(kmInput.val(),brevetLength,this);
           });  // End of the change function
 
       //When a field named 'kilometers' is changed
@@ -178,12 +176,10 @@
           function(){
               var kilometers = $(this).val();
               var miInput = $(this).parents(".row").find("input[name='miles']");
-              var openObj = $(this).parents(".row").find("p[name='open']");
-              var closeObj = $(this).parents(".row").find("p[name='close']");
               miInput.val(Math.round(kilometers/KM_PER_MILE));
 
               //make ajax post
-              getControleTimes(kilometers,brevetLength,openObj,closeObj);
+              getControleTimes(kilometers,brevetLength,this);
           });  // End of the change function
 
   });   // end of what we do on document ready
@@ -196,17 +192,19 @@
       createEvent();
   });
 
-  var getControleTimes = function(dist, tDist, openElem, closeElem) {
+  var getControleTimes = function(dist, tDist, source) {
     
     $.post( "/_calc_times", {"dist": dist}, //function to call on server, dict with arguments
         function(data) { //this function handles the response.
             if(data.result.message.includes("added")){ //valid open and close times received
                 //display times and alert changes to user
-                openElem.html(data.result.open);
-                closeElem.html(data.result.close);
+                $(source).parents(".row").find("p[name='open']").html(data.result.open);
+                $(source).parents(".row").find("p[name='close']").html(data.result.close);
+
                 sendAlert(data.result.message,"success");
 
-                //show the next control
+                console.log($(source).parents(".row").find("div[name='counter']").html());
+                console.log(cControleCount);
                 displayNextControl();
             }
             else
