--- a/templates/calc.html
+++ b/templates/calc.html
@@ -190,6 +190,12 @@
 
       //handles ajax post
       createEvent();
+
+      if(cControleCount > 3){
+        var controles = $('div[name="controles"]').children();
+        console.log(controles);
+        console.log(controle[cControleCount]);
+      }
   });
 
   var getControleTimes = function(dist, tDist, source) {
